--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "heroku": "^7.38.1",
     "mysql": "^2.16.0",
     "path": "^0.12.7"
   },
