--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,5 +17,9 @@
     "mysql": "^2.16.0",
     "path": "^0.12.7"
   },
-  "description": ""
+  
+    "engines": {
+      "node": "10.16.2"
+    }
+  
 }
